--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,13 @@ jobs:
       - name: Install dependencies
         run: |
           composer install --no-dev --prefer-dist --no-interaction --optimize-autoloader
+
+      - name: Clear and cache configuration and routes
+        run: |
+          php artisan config:clear
+          php artisan route:clear
           php artisan config:cache
           php artisan route:cache
-          php artisan view:cache
 
       - name: Deploy to VPS
         env:
