--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,14 @@ jobs:
           php artisan config:cache
           php artisan route:cache
 
+      - name: Verificar secrets
+        run: |
+          if [ -z "$DEPLOY_HOST" ]; then echo "DEPLOY_HOST está vacío"; else echo "DEPLOY_HOST está configurado"; fi
+          if [ -z "$DEPLOY_USER" ]; then echo "DEPLOY_USER está vacío"; else echo "DEPLOY_USER está configurado"; fi
+        env:
+          DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+          DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+
       - name: Deploy to VPS
         env:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
