--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,12 @@ jobs:
         run: |
           if [ -z "$DEPLOY_HOST" ]; then echo "DEPLOY_HOST está vacío"; else echo "DEPLOY_HOST está configurado"; fi
           if [ -z "$DEPLOY_USER" ]; then echo "DEPLOY_USER está vacío"; else echo "DEPLOY_USER está configurado"; fi
+          # Muestra si alguna de las variables está vacía o configurada
+          echo "DEPLOY_HOST: $DEPLOY_HOST"
+          echo "DEPLOY_USER: $DEPLOY_USER"
         env:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
           DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
-
       - name: Deploy to VPS
         env:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
