--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,17 @@ jobs:
         env:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
 
+      - name: Add SSH key to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H $DEPLOY_HOST >> ~/.ssh/known_hosts
+
       - name: Deploy to VPS
         env:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
           DEPLOY_PATH: /var/www/laravel
         run: |
+          if [ -z "$DEPLOY_HOST" ]; then echo "DEPLOY_HOST está vacío"; exit 1; fi
+          if [ -z "$DEPLOY_USER" ]; then echo "DEPLOY_USER está vacío"; exit 1; fi
+          echo "Conectando a $DEPLOY_HOST..."
           ssh root@$DEPLOY_HOST "cd $DEPLOY_PATH && git pull origin main && composer install --no-dev && php artisan config:cache"
